fix for lingering clearfix spacing

--- a/CancerGov/_src/Scripts/NCI/UX/PageSpecific/PDQ/PDQPage.scss
+++ b/CancerGov/_src/Scripts/NCI/UX/PageSpecific/PDQ/PDQPage.scss
@@ -84,6 +84,14 @@
 	margin-top: 70px;
 }
 
+// Lingering clearfix spacing removal [WCMSFEQ-1344]
+@include bp(medium-up){
+	.clearfix::after, .clearfix::before, .pullquote-left::after, .pullquote-left::before, .pullquote-right::after, .pullquote-right::before, .pullquote::after, .pullquote::before
+	{
+		content: none; // setting content to none to be double-safe that a content with an empty string does not get generated
+		display: none;
+	}
+}
 
 @include bp(small){
 	/* Hide 'On This Page' section on PDQ & factsheet pages */
